add some comments for ex1

--- a/index.html
+++ b/index.html
@@ -19,6 +19,69 @@
 </ul></div><!--enf of tag-->
 
 
+
+<!-- TODO: focus on my-card. -->
+<div class="my-card">
+
+	<div class="clients_image">
+		<img src="css/images/b.jpg" alt="">
+	</div>
+
+	<div id="info_text">
+		<p>Venenatis Ridiculus</p>
+	</div><!--end of tag-->
+
+
+	<div class="ranking">
+		<p>99 </p>
+	</div><!-- end of img tag-->
+	
+	<div class="money_raised">
+		<p>$10,000</p>
+	</div><!-- end of img tag-->
+
+</div>
+<div class="my-card">
+
+	<div class="clients_image">
+		<img src="css/images/b.jpg" alt="">
+	</div>
+
+	<div id="info_text">
+		<p>Venenatis Ridiculus</p>
+	</div><!--end of tag-->
+
+
+	<div class="ranking">
+		<p>99 </p>
+	</div><!-- end of img tag-->
+	
+	<div class="money_raised">
+		<p>$10,000</p>
+	</div><!-- end of img tag-->
+
+</div>
+<div class="my-card">
+
+	<div class="clients_image">
+		<img src="css/images/b.jpg" alt="">
+	</div>
+
+	<div id="info_text">
+		<p>Venenatis Ridiculus</p>
+	</div><!--end of tag-->
+
+
+	<div class="ranking">
+		<p>99 </p>
+	</div><!-- end of img tag-->
+	
+	<div class="money_raised">
+		<p>$10,000</p>
+	</div><!-- end of img tag-->
+
+</div>
+
 <div id="card">
 	
 	<div class="clients_image">
@@ -34,7 +97,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -64,7 +127,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -93,7 +156,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -123,7 +186,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -153,7 +216,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -184,7 +247,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -200,7 +263,7 @@
 
 
 
-<div id="card7">
+<div id="card7" class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -215,7 +278,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -230,7 +293,7 @@
 
 
 
-<div id="card8">
+<div id="card8" class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -245,7 +308,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -259,7 +322,7 @@
 </div><!--end of card tag-->  
 
 
-<div id="card9">
+<div id="card9" class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -274,7 +337,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
@@ -302,7 +365,7 @@
 
 			<div class="ranking">
 		
-				<p>Ranked </p>
+				<p>99 </p>
 
 			</div><!-- end of img tag-->
 	
