--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 	<div class="ranking">
-		<p>99 </p>
+		<p >1</p>
 	</div><!-- end of img tag-->
 	
 	<div class="money_raised">
@@ -41,10 +41,14 @@
 	</div><!-- end of img tag-->
 
 </div>
+
+
+
+
 <div class="my-card">
 
 	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
+		<img src="css/images/Female.png" alt="">
 	</div>
 
 	<div id="info_text">
@@ -53,7 +57,7 @@
 
 
 	<div class="ranking">
-		<p>99 </p>
+		<p>2 </p>
 	</div><!-- end of img tag-->
 	
 	<div class="money_raised">
@@ -61,10 +65,12 @@
 	</div><!-- end of img tag-->
 
 </div>
+
+
 <div class="my-card">
 
 	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
+		<img src="css/images/female2.jpg" alt="">
 	</div>
 
 	<div id="info_text">
@@ -73,7 +79,7 @@
 
 
 	<div class="ranking">
-		<p>99 </p>
+		<p>3 </p>
 	</div><!-- end of img tag-->
 	
 	<div class="money_raised">
@@ -81,6 +87,7 @@
 	</div><!-- end of img tag-->
 
 </div>
+
 
 <div id="card">
 	
