--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div><!-- end of img tag-->
 	
 	<div class="money_raised">
-		<p>$10,000</p>
+		<p>$5,000</p>
 	</div><!-- end of img tag-->
 
 </div>
@@ -69,8 +69,8 @@
 
 <div class="my-card">
 
-	<div class="clients_image">
-		<img src="css/images/female2.jpg" alt="">
+	<div class="clients_image_female">
+		<!--<img src="css/images/female2.jpg" alt="">-->
 	</div>
 
 	<div id="info_text">
@@ -83,13 +83,72 @@
 	</div><!-- end of img tag-->
 	
 	<div class="money_raised">
-		<p>$10,000</p>
+		<p>$2,500</p>
 	</div><!-- end of img tag-->
 
 </div>
 
 
-<div id="card">
+<div class="card">
+	
+	<div class="clients_image">
+		<img src="css/images/b.jpg" alt="">
+	</div>
+
+		<div id="info_text">
+
+			<p>Venenatis Ridiculus</p>
+
+		</div><!--end of tag-->
+
+
+			<div class="ranking">
+		
+				<p>99 </p>
+
+			</div><!-- end of img tag-->
+	
+			<div class="money_raised">
+
+				<p>$5,000</p>
+
+			</div><!--end of img tag-->
+
+
+</div><!--end of card tag-->  
+
+
+
+<div class="card">
+	
+	<div class="clients_image">
+		<img src="css/images/b.jpg" alt="">
+	</div>
+
+		<div id="info_text">
+
+			<p>Venenatis Ridiculus</p>
+
+		</div><!--end of tag-->
+
+
+			<div class="ranking">
+		
+				<p>99 </p>
+
+			</div><!-- end of img tag-->
+	
+			<div class="money_raised">
+
+				<p>$2,500</p>
+
+			</div><!-- end of img tag-->
+
+
+</div><!--end of card tag-->  
+
+
+<div class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -119,36 +178,7 @@
 
 
 
-<div id="card2">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-<div id="card3">
+<div class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -178,68 +208,7 @@
 
 
 
-<div id="card4">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-<div id="card5">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-
-<div id="card6">
+<div class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -270,7 +239,7 @@
 
 
 
-<div id="card7" class="card">
+<div class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -300,7 +269,8 @@
 
 
 
-<div id="card8" class="card">
+
+<div class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -329,7 +299,67 @@
 </div><!--end of card tag-->  
 
 
-<div id="card9" class="card">
+
+<div class="card" >
+	
+	<div class="clients_image">
+		<img src="css/images/b.jpg" alt="">
+	</div>
+
+		<div id="info_text">
+
+			<p>Venenatis Ridiculus</p>
+
+		</div><!--end of tag-->
+
+
+			<div class="ranking">
+		
+				<p>99 </p>
+
+			</div><!-- end of img tag-->
+	
+			<div class="money_raised">
+
+				<p>$10,000</p>
+
+			</div><!-- end of img tag-->
+
+
+</div><!--end of card tag-->  
+
+
+<div class="card">
+	
+	<div class="clients_image">
+		<img src="css/images/b.jpg" alt="">
+	</div>
+
+		<div id="info_text">
+
+			<p>Venenatis Ridiculus</p>
+
+		</div><!--end of tag-->
+
+
+			<div class="ranking">
+		
+				<p>99 </p>
+
+			</div><!-- end of img tag-->
+	
+			<div class="money_raised">
+
+				<p>$10,000</p>
+
+			</div><!-- end of img tag-->
+
+
+</div><!--end of card tag--> 
+	
+
+		
+<div class="card">
 	
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
@@ -357,30 +387,9 @@
 
 </div><!--end of card tag--> 
 
-<div id="card10">
+			
 	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
+			
 
 
 </div><!--end of card tag-->  
