--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<div class="clients_image">
 		<img src="css/images/b.jpg" alt="">
-	</div>
+	</div><!---->
 
 	<div id="info_text">
 		<p>Venenatis Ridiculus</p>
