--- a/index.html
+++ b/index.html
@@ -5,18 +5,7 @@
 <body>
 
 
-<div id="menue_bar">
-	<ul>
 
-	<a href="index.html"><li><p>home</p></li></a>
-	<a href=""><li><p>ff</p></li></a>
-	<a href=""><li><p>efwf</p></li></a>
-	<a href=""><li><p>conatct</p></li></a>
-	<a href=""><li><p>conatct</p></li></a>
-
-
-
-</ul></div><!--enf of tag-->
 
 
 
@@ -30,6 +19,8 @@
 	<div id="info_text">
 		<p>Venenatis Ridiculus</p>
 	</div><!--end of tag-->
+
+
 
 
 	<div class="ranking">
@@ -86,313 +77,58 @@
 		<p>$2,500</p>
 	</div><!-- end of img tag-->
 
+
+<div id="myinfo" class="myinfo">wrrwdq</div>
+
+
+<div id="js-intro">
+	
+</div>
+
+<div class="page-about">
+	<div class="header">
+		<ul class="names names-cap">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
 </div>
 
 
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
+<div class="shem">
+	<p>child 1</p> 
+	<div>
+		<p>grand child 1</p>
+		<p>grand child 2</p>
 	</div>
+	<p>child 2</p>
+	<p>child 3</p>
+</div>
 
-		<div id="info_text">
+<div>
+	<p class="title">
+		This is a title
+	</p>
+	<p class="title2">
+		this is title margin bottom title 2 
+	</p>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam magni accusamus amet voluptas corrupti natus tenetur repellat, ea numquam ipsa. Culpa vel id aut ab tempora aliquam labore quas odio.
+	</p>
+</div>
 
-			<p>Venenatis Ridiculus</p>
+<div>
+	<a href="" class="btn-lg"> large button </a>
+</div>
 
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$5,000</p>
-
-			</div><!--end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
+<!-- mofiders are good -->
+<div class="content">
+	<div class="title title-imp">
+		hello
 	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
 	
-			<div class="money_raised">
-
-				<p>$2,500</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-
-<div class="card" >
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag-->  
-
-
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag--> 
-	
-
-		
-<div class="card">
-	
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div>
-
-		<div id="info_text">
-
-			<p>Venenatis Ridiculus</p>
-
-		</div><!--end of tag-->
-
-
-			<div class="ranking">
-		
-				<p>99 </p>
-
-			</div><!-- end of img tag-->
-	
-			<div class="money_raised">
-
-				<p>$10,000</p>
-
-			</div><!-- end of img tag-->
-
-
-</div><!--end of card tag--> 
-
-			
-	
-			
-
-
-</div><!--end of card tag-->  
+</div>
 
 
 
