make cars modular/ function in any document

--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
 	
 </div>
 
+<!-- minizing side effects -->
+<!-- make component and make it work on its own. -->
+<!--  Self Contained -->
+<!-- example of side effect -->
+<!-- minimize "leakage" of style. -->
+<!-- make things predictable. -->
+<!-- creating css classes is not a good idea ... -->
+<!-- it is a good idea to create ... -->
+<div class="card">
+	<h2>this is the title of the card</h2>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio sunt dolorem impedit, nam quas unde, facere saepe nesciunt repudiandae expedita odio commodi ullam veniam totam rem deleniti ratione! Labore, dolorem.
+	</p>
+</div>
+
 
 
 </body>
