refactor game card

--- a/index.html
+++ b/index.html
@@ -1,131 +1,49 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<link rel="stylesheet" type="text/css" href="css/shem.css">
-<link rel="stylesheet" type="text/css" href="" >
-<body>
-
-<!-- TODO: focus on my-card. -->
-<div class="my-card">
-
-	<div class="clients_image">
-		<img src="css/images/b.jpg" alt="">
-	</div><!---->
-
-	<div id="info_text">
-		<p>Venenatis Ridiculus</p>
-	</div><!--end of tag-->
-
-
-
-
-	<div class="ranking">
-		<p >1</p>
-	</div><!-- end of img tag-->
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/game-card.css">
+<body class="mypage">
+<div class="game-card">
 	
-	<div class="money_raised">
-		<p>$10,000</p>
-	</div><!-- end of img tag-->
+	<div class="game-card--display">
+		<img class="game-card--image" src="css/images/typhlosion.png" alt="typhlosion.jpg">
+	</div><!-- end of image div -->
 
-</div>
+	<div class="game-card--details">
+		<h4 class="game-card--title">TYPHLOSION</h4>
+		<p> Quilava, named Exbo, evolved into Typhlosion to protect Silver, Crystal, and himself from Lugia. Afterwards, its larger size allowed it to be a method of faster travel.</p>
 
-<div class="my-card">
+	</div><!-- end of text div-->
 
-	<div class="clients_image">
-		<img src="css/images/Female.png" alt="">
-	</div>
-
-	<div id="info_text">
-		<p>Venenatis Ridiculus</p>
-	</div><!--end of tag-->
-
-
-	<div class="ranking">
-		<p>2 </p>
-	</div><!-- end of img tag-->
-	
-	<div class="money_raised">
-		<p>$5,000</p>
-	</div><!-- end of img tag-->
-
-</div>
-
-
-<div class="my-card">
-
-	<div class="clients_image_female">
-		<!--<img src="css/images/female2.jpg" alt="">-->
-	</div>
-
-	<div id="info_text">
-		<p>Venenatis Ridiculus</p>
-	</div><!--end of tag-->
-
-
-	<div class="ranking">
-		<p>3 </p>
-	</div><!-- end of img tag-->
-	
-	<div class="money_raised">
-		<p>$2,500</p>
-	</div><!-- end of img tag-->
-
-
-<div id="myinfo" class="myinfo">wrrwdq</div>
-
-
-<div id="js-intro">
-	
-</div>
-
-<div class="page-about">
-	<div class="header">
-		<ul class="names names-cap">
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-	</div>
-</div>
-
-
-<div class="shem">
-	<p>child 1</p> 
-	<div>
-		<p>grand child 1</p>
-		<p>grand child 2</p>
-	</div>
-	<p>child 2</p>
-	<p>child 3</p>
-</div>
-
-<div>
-	<a href="" class="btn-lg"> large button </a>
-</div>
-
-<!-- mofiders are good -->
-<div class="content">
-	<div class="title title-imp">
-		hello
-	</div>
-	
-</div>
-
-<!-- minizing side effects -->
-<!-- make component and make it work on its own. -->
-<!--  Self Contained -->
-<!-- example of side effect -->
-<!-- minimize "leakage" of style. -->
-<!-- make things predictable. -->
-<!-- creating css classes is not a good idea ... -->
-<!-- it is a good idea to create ... -->
-<div class="card">
-	<h2>this is the title of the card</h2>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio sunt dolorem impedit, nam quas unde, facere saepe nesciunt repudiandae expedita odio commodi ullam veniam totam rem deleniti ratione! Labore, dolorem.
-	</p>
-</div>
+</div><!-- end of game-card div-->
 
 
 
-</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>	
 </html>
