remove extra class names

--- a/index.html
+++ b/index.html
@@ -1,49 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/game-card.css">
-<body class="mypage">
-<div class="game-card">
-	
-	<div class="game-card--display">
-		<img class="game-card--image" src="css/images/typhlosion.png" alt="typhlosion.jpg">
-	</div><!-- end of image div -->
-
-	<div class="game-card--details">
-		<h4 class="game-card--title">TYPHLOSION</h4>
-		<p> Quilava, named Exbo, evolved into Typhlosion to protect Silver, Crystal, and himself from Lugia. Afterwards, its larger size allowed it to be a method of faster travel.</p>
-
-	</div><!-- end of text div-->
-
-</div><!-- end of game-card div-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>	
+	<head>
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/game-card.css">
+	</head>
+	<body>
+		<div class="game-card">
+			<div class="game-card--display">
+				<img class="game-card--image" src="css/images/typhlosion.png" alt="typhlosion.jpg">
+			</div>
+			<div class="game-card--details">
+				<h4 class="game-card--title">Typhlosion</h4>
+				<p> Quilava, named Exbo, evolved into Typhlosion to protect Silver, Crystal, and himself from Lugia. Afterwards, its larger size allowed it to be a method of faster travel.</p>
+			</div>
+		</div>
+	</body>	
 </html>
