--- a/index.html
+++ b/index.html
@@ -1,18 +1,101 @@
 <!DOCTYPE html>
-<html lang="en-US">
-	<head>
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/game-card.css">
-	</head>
-	<body>
-		<div class="game-card">
-			<div class="game-card--display">
-				<img class="game-card--image" src="css/images/typhlosion.png" alt="typhlosion.jpg">
-			</div>
-			<div class="game-card--details">
-				<h4 class="game-card--title">Typhlosion</h4>
-				<p> Quilava, named Exbo, evolved into Typhlosion to protect Silver, Crystal, and himself from Lugia. Afterwards, its larger size allowed it to be a method of faster travel.</p>
-			</div>
-		</div>
-	</body>	
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/yugio-card.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.min.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
+
+     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <style type="text/css">
+      .shem{background-color: lightblue; border: 1px solid lightblue;}
+    </style>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+
+ 
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-4">
+          <div class="well">
+            <div class="yugio-container">
+                <div class="yugio-card--display">
+                <div class="yugio-card--element"></div>
+                <img class="yugio-card--image" src="css/images/winged-dragon.jpg" alt="winged-dragon">  
+              </div>
+              <div class="yugio-card--description">
+                <h4 class="yugio-card--name">Winged dragon of ra</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, perferendis nostrum nisi sint autem explicabo, provident dolore commodi veritatis, beatae consectetur harum ut quia maxime tenetur cumque tempora non itaque?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <div class="col-lg-6 col-sm-4">
+          <div class="well">
+          <div class="yugio-container">
+                <div class="yugio-card--display">
+                <div class="yugio-card--element"></div>
+                <img class="yugio-card--image" src="css/images/winged-dragon.jpg" alt="winged-dragon">  
+              </div>
+              <div class="yugio-card--description">
+                <h4 class="yugio-card--name">Winged dragon of ra</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, perferendis nostrum nisi sint autem explicabo, provident dolore commodi veritatis, beatae consectetur harum ut quia maxime tenetur cumque tempora non itaque?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-sm-4">
+          <div class="well">
+          <div class="yugio-container">
+                <div class="yugio-card--display">
+                <div class="yugio-card--element"></div>
+                <img class="yugio-card--image" src="css/images/winged-dragon.jpg" alt="winged-dragon">  
+              </div>
+              <div class="yugio-card--description">
+                <h4 class="yugio-card--name">Winged dragon of ra</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, perferendis nostrum nisi sint autem explicabo, provident dolore commodi veritatis, beatae consectetur harum ut quia maxime tenetur cumque tempora non itaque?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <div class="col-lg-6 col-sm-4">
+          <div class="well">
+          <div class="yugio-container">
+                <div class="yugio-card--display">
+                <div class="yugio-card--element"></div>
+                <img class="yugio-card--image" src="css/images/winged-dragon.jpg" alt="winged-dragon">  
+              </div>
+              <div class="yugio-card--description">
+                <h4 class="yugio-card--name">Winged dragon of ra</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, perferendis nostrum nisi sint autem explicabo, provident dolore commodi veritatis, beatae consectetur harum ut quia maxime tenetur cumque tempora non itaque?</p>
+              </div>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </div>
+
+   
+  </body>
 </html>
